--- a/package.json
+++ b/package.json
@@ -8,10 +8,10 @@
   "scripts": {
     "clean": "rimraf _site && rimraf _tmp",
     "build": "npm-run-all clean build:html build:css",
-    "build:css": "cross-env NODE_ENV=production & postcss src/styles/style.css --o _site/style.css && cleancss _site/style.css -o _site/style.css",
+    "build:css": "cross-env NODE_ENV=production & postcss src/styles/style.css -o _site/style.css && cleancss _site/style.css -o _site/style.css",
     "build:html": "cross-env ELEVENTY_PRODUCTION=true & eleventy",
     "watch": "npm-run-all --parallel watch:html watch:css",
-    "watch:css": "postcss src/styles/style.css --o _tmp/style.css --watch",
+    "watch:css": "postcss src/styles/style.css -o _tmp/style.css --watch",
     "watch:html": "eleventy --serve",
     "deploy": "gh-pages -d _site"
   },
