refactor: build was borken and cleaned

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "clean": "rimraf _site && rimraf _tmp",
     "build": "npm-run-all clean build:html build:css",
-    "build:css": "cross-env NODE_ENV=production & postcss src/styles/style.css -o _site/style.css && cleancss _site/style.css -o _site/style.css",
+    "build:css": "cross-env NODE_ENV=production & postcss src/styles/style.css -o _site/styles/style.css && cleancss _site/styles/style.css -o _site/styles/style.css",
     "build:html": "cross-env ELEVENTY_PRODUCTION=true & eleventy",
     "watch": "npm-run-all --parallel watch:html watch:css",
     "watch:css": "postcss src/styles/style.css -o _tmp/style.css --watch",
