--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "devDependencies": {
     "@11ty/eleventy": "^0.12.1",
     "@11ty/eleventy-navigation": "^0.2.0",
+    "alpinejs": "^3.1.0",
     "autoprefixer": "^10.2.5",
     "clean-css-cli": "^5.2.2",
     "cross-env": "^7.0.3",
